// Building Signal Simulator Database Schema - SQL Version

Project BuildingSignalSimulator {
  database_type: 'Generic SQL'
  Note: '''
  # Building Signal Simulator Database
  
  This database stores information about signal distribution components and configurations
  for building signal simulation. It tracks components, their technical specifications,
  and how they are used in different building configurations.
  '''
}

// Main tables
Table TiposComponente {
  id_tipos_componente int [pk, increment, not null]
  nombre varchar(50) [not null]
  descripcion text
  
  indexes {
    nombre [unique]
  }
  
  Note: "Defines the component types: Cable Coaxial, Base de Toma, Derivador, Distribuidor"
}

Table Componentes {
  id_componentes int [pk, increment, not null]
  id_tipos_componente int [ref: > TiposComponente.id_tipos_componente, not null]
  modelo varchar(100) [not null]
  costo decimal(10,2) [not null]
  
  indexes {
    id_tipos_componente
  }
  
  Note: "Central table that links to specific component tables based on type"
}

// Component-specific tables
Table Coaxiales {
  id_coaxiales int [pk, increment, not null]
  id_componentes int [ref: - Componentes.id_componentes]
  atenuacion_470mhz float
  atenuacion_694mhz float
  
  indexes {
    id_componentes [unique]
  }
  
  Note: "Technical properties specific to coaxial cables"
}

Table Derivadores {
  id_derivadores int [pk, increment, not null]
  id_componentes int [ref: - Componentes.id_componentes]
  atenuacion_derivacion float
  atenuacion_paso float
  directividad float
  desacoplo float
  perdidas_retorno float
  
  indexes {
    id_componentes [unique]
  }
  
  Note: "Characteristics of signal derivators"
}

Table Distribuidores {
  id_distribuidores int [pk, increment, not null]
  id_componentes int [ref: - Componentes.id_componentes]
  numero_salidas int
  atenuacion_distribucion float
  desacoplo float
  perdidas_retorno float
  
  indexes {
    id_componentes [unique]
  }
  
  Note: "Data for signal distributors (splitters)"
}

Table Tomas {
  id_tomas int [pk, increment, not null]
  id_componentes int [ref: - Componentes.id_componentes]
  atenuacion float
  desacoplo float
  
  indexes {
    id_componentes [unique]
  }
  
  Note: "Technical characteristics of signal outlets"
}

// Configuration tables
Table Configuraciones {
  id_configuraciones int [pk, increment, not null]
  nombre varchar(100) [not null]
  nivel_cabecera float [not null]
  num_pisos int [not null]
  costo_total decimal(10,2) [not null]
  fecha_creacion timestamp [not null]
  usuario_creacion varchar(50) [not null]
  fecha_modificacion timestamp
  usuario_modificacion varchar(50)
  
  Note: "General configurations created by users"
}

Table MargenesCalidad {
  id_margenes_calidad int [pk, increment, not null]
  tipo_senal varchar(50) [not null]
  nivel_minimo float [not null]
  nivel_maximo float [not null]
  
  indexes {
    tipo_senal [unique]
  }
  
  Note: "Defines acceptable quality margins for signals (e.g., TDT)"
}

// Table groups for better organization
TableGroup ComponentesTables {
  TiposComponente
  Componentes
  Coaxiales
  Derivadores
  Distribuidores
  Tomas
}

TableGroup ConfiguracionesTables {
  Configuraciones
  MargenesCalidad
}
